Wow, loadsa changes! Woop! Careful there's a funny bug-sama

--- a/Eindopdracht GDEV++/Eindopdracht GDEV++/Eindopdracht GDEV++.vcxproj
+++ b/Eindopdracht GDEV++/Eindopdracht GDEV++/Eindopdracht GDEV++.vcxproj
@@ -75,7 +75,7 @@
     <IncludePath>C:\SFML\include;$(VC_IncludePath);$(WindowsSDK_IncludePath);</IncludePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
-    <LinkIncremental>false</LinkIncremental>
+    <LinkIncremental>true</LinkIncremental>
     <IncludePath>C:\SFML\include;$(VC_IncludePath);$(WindowsSDK_IncludePath);</IncludePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -83,7 +83,7 @@
     <IncludePath>C:\SFML\include;$(VC_IncludePath);$(WindowsSDK_IncludePath);</IncludePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
-    <LinkIncremental>false</LinkIncremental>
+    <LinkIncremental>true</LinkIncremental>
     <IncludePath>C:\SFML\include;$(VC_IncludePath);$(WindowsSDK_IncludePath);</IncludePath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
@@ -168,16 +168,14 @@
       </AdditionalIncludeDirectories>
     </ClCompile>
     <ClCompile Include="Maths.cpp" />
-    <ClCompile Include="Physics.cpp" />
-    <ClCompile Include="Player.cpp" />
+    <ClCompile Include="PhysicsObject.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Actor.h" />
     <ClInclude Include="AngyMan.h" />
     <ClInclude Include="Eindopdracht GDEV++.h" />
     <ClInclude Include="Maths.h" />
-    <ClInclude Include="Physics.h" />
-    <ClInclude Include="Player.h" />
+    <ClInclude Include="PhysicsObject.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
