--- a/Eindopdracht GDEV++/Eindopdracht GDEV++/Eindopdracht GDEV++.vcxproj.filters
+++ b/Eindopdracht GDEV++/Eindopdracht GDEV++/Eindopdracht GDEV++.vcxproj.filters
@@ -18,7 +18,7 @@
     <ClCompile Include="Eindopdracht GDEV++.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Maths.cpp">
+    <ClCompile Include="Vector2.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Actor.cpp">
@@ -32,7 +32,7 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Maths.h">
+    <ClInclude Include="Vector2.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Actor.h">
